<?xml version="1.0" encoding="utf-8"?>
<!--
RelativeLayout 안에 EditText와 TableLayout을 넣어서 ui를 구성
-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hong.android101.MainActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/value"
        android:textSize="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#d5d4d4"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:stretchColumns="*"
        android:layout_alignParentBottom="true">

        <TableRow>

            <Button
                android:id="@+id/seven"
                android:text="@string/seven"
                android:textSize="40dp"/>

            <Button
                android:id="@+id/eight"
                android:layout_height="wrap_content"
                android:text="@string/eight"
                android:textSize="40dp"/>

            <Button
                android:id="@+id/nine"
                android:layout_height="wrap_content"
                android:text="@string/nine"
                android:textSize="40dp"/>

            <Button
                android:id="@+id/div"
                android:layout_height="wrap_content"
                android:text="@string/div"
                android:textSize="40dp"/>
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/four"
                android:layout_height="wrap_content"
                android:text="@string/four"
                android:textSize="40dp"/>

            <Button
                android:id="@+id/five"
                android:layout_height="wrap_content"
                android:text="@string/five"
                android:textSize="40dp"/>

            <Button
                android:id="@+id/six"
                android:layout_height="wrap_content"
                android:text="@string/six"
                android:textSize="40dp"/>

            <Button
                android:id="@+id/mul"
                android:layout_height="wrap_content"
                android:text="@string/mul"
                android:textSize="40dp"/>
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/one"
                android:layout_height="wrap_content"
                android:text="@string/one"
                android:textSize="40dp"/>

            <Button
                android:id="@+id/two"
                android:layout_height="wrap_content"
                android:text="@string/two"
                android:textSize="40dp"/>

            <Button
                android:id="@+id/three"
                android:layout_height="wrap_content"
                android:text="@string/three"
                android:textSize="40dp"/>

            <Button
                android:id="@+id/sub"
                android:layout_height="wrap_content"
                android:text="@string/sub"
                android:textSize="40dp"/>
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/zero"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textSize="40dp"/>

            <Button
                android:id="@+id/clear"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                android:textSize="40dp"/>

            <Button
                android:id="@+id/result"
                android:layout_height="wrap_content"
                android:text="@string/result"
                android:textSize="40dp"/>

            <Button
                android:id="@+id/plus"
                android:layout_height="wrap_content"
                android:text="@string/plus"
                android:textSize="40dp"/>
        </TableRow>
    </TableLayout>
</RelativeLayout>